--- a/doc/btrbk.1.asciidoc
+++ b/doc/btrbk.1.asciidoc
@@ -1,7 +1,7 @@
 btrbk(1)
 ========
-:date: 2021-03-21
-:release-version: 0.31.2
+:date: 2021-08-07
+:release-version: 0.31.3
 :man manual: Btrbk Manual
 :man source: Btrbk {release-version}
 
@@ -20,7 +20,8 @@ btrbk [-h|--help] [--version]
       [-c|--config <file>] [-n|--dry-run] [--exclude <filter>]
       [-p|--preserve] [--preserve-snapshots] [--preserve-backups]
       [-v|--verbose] [-q|--quiet] [-l|--loglevel <level>]
-      [-t|--table] [-L|--long] [--format <output-format>] [--pretty]
+      [-t|--table] [-L|--long] [-1|--single-column]
+      [--format <output-format>] [--pretty]
       [-S|--print-schedule] [--progress]
       [--lockfile <file>]
       [--override <config_option>=<value>]
@@ -126,6 +127,9 @@ OPTIONS
 -L, --long::
     Print output in long table format (shortcut for "--format=long").
 
+-1, --single-column::
+    Print output as single column (not available for all commands).
+
 --format table|long|raw|col:[h:]<columns>::
     Print output in specified format. If set to "raw", prints
     space-separated key="value" pairs (machine readable).
@@ -210,8 +214,9 @@ configuring the retention policy.
     snapshots that are not preserved by their configured retention
     policy will be deleted. Note that the latest snapshot (the one
     created in step 1) as well as the latest snapshot/backup pair are
-    always preserved, regardless of the retention policy.
-
+    always preserved, regardless of the retention policy. If any
+    target is unreachable or has errors, all snapshots are preserved
+    in order not to break the incremental chain.
 
 *dryrun* [filter...]::
     Don't run any btrfs commands that would alter the filesystem, just
