--- a/doc/btrbk.conf.5.asciidoc
+++ b/doc/btrbk.conf.5.asciidoc
@@ -1,7 +1,7 @@
 btrbk.conf(5)
 =============
-:date: 2021-03-21
-:release-version: 0.31.2
+:date: 2021-08-07
+:release-version: 0.31.3
 :man manual: Btrbk Manual
 :man source: Btrbk {release-version}
 
@@ -307,6 +307,10 @@ option in ssh_config(5).
     Number of threads to use for <compress_command>. Only supported
     for "pigz", "pbzip2", "zstd" and recent versions of "xz".
 
+*stream_compress_adapt* default|<number>::
+    Enable adaptive compression for <compress_command>. Only supported
+    for "zstd" (version >= 1.3.6).
+
 *stream_buffer* <size>|no::
     Add a buffer to the btrfs send stream (locally, on uncompressed
     data), with a maximum size of '<size>'. This can give a speed
@@ -449,6 +453,14 @@ If you want to set this option for regular (non-root) user only, set
     default qgroup "+0/<subvol-id>+". Only useful if you have enabled
     btrfs quota support. See also:
     <https://bugzilla.kernel.org/show_bug.cgi?id=91751>
+
+
+=== Informative Options
+
+*warn_unknown_targets* yes|no::
+    If set, prints a warning if btrbk encounters a target subvolume at
+    a unknown location (i.e. not following btrbk naming scheme, or
+    outside the target directory). Defaults to ``no''.
 
 
 RETENTION POLICY
