--- a/doc/lsbtr.1.asciidoc
+++ b/doc/lsbtr.1.asciidoc
@@ -1,7 +1,7 @@
 lsbtr(1)
 ========
-:date: 2021-03-21
-:release-version: 0.31.2
+:date: 2021-08-07
+:release-version: 0.31.3
 :man manual: Btrbk Manual
 :man source: Btrbk {release-version}
 
@@ -17,7 +17,8 @@ SYNOPSIS
 
 [verse]
 lsbtr [-h|--help] [--version]
-      [-l|--long] [-u|--uuid] [--raw]
+      [-l|--long] [-u|--uuid] [-1|--single-column] [--raw]
+      [--format <output-format>]
       [-v|--verbose]
       [-c|--config <file>]
       [--override <config_option>=<value>]
@@ -55,8 +56,20 @@ OPTIONS
 -u, --uuid::
     Print UUID table (parent/received relations).
 
+-1, --single-column::
+    Print path column only (delimited by newline).
+
 --raw::
     Print space-separated key="value" pairs (machine readable).
+
+--format table|long|raw|col:[h:]<columns>::
+    Print output in specified format. If set to "raw", prints
+    space-separated key="value" pairs (machine readable).
++
+If set to "col:", prints only the <columns> specified (comma-separated
+list). Header lines are ommitted if the "h:" modifier is present.
+Columns prefixed with "-" are collapsed if empty. Columns postfixed
+with ":RALIGN" are right-aligned.
 
 -v, --verbose::
     Increase the level of verbosity.
