--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+btrbk (0.32.1-1kaisen) kaisen-packages; urgency=medium
+
+  * Import 0.32.1 version
+
+ -- Kevin Chevreuil - Kaisen <kaisen@kaisenlinux.org>  Sun, 27 Feb 2022 16:11:29 +0100
+
 btrbk (0.32.0-2kaisen) kaisen-packages; urgency=medium
 
   * Add --no-enable systemd when service is installed
