--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+btrbk (0.32.2-1kaisen) kaisen-packages; urgency=medium
+
+  * Import 0.32.2 version
+
+ -- Kevin Chevreuil - Kaisen <kaisen@kaisenlinux.org>  Thu, 07 Jul 2022 19:28:11 +0100
+
 btrbk (0.32.1-1kaisen) kaisen-packages; urgency=medium
 
   * Import 0.32.1 version
