--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+btrbk (0.32.3-1kaisen) kaisen-packages; urgency=medium
+
+  * Import 0.32.3 version
+
+ -- Kevin Chevreuil - Kaisen <kaisen@kaisenlinux.org>  Sun, 14 Aug 2022 15:37:54 +0100
+
 btrbk (0.32.2-1kaisen) kaisen-packages; urgency=medium
 
   * Import 0.32.2 version
