--- a/doc/btrbk.conf.5.asciidoc
+++ b/doc/btrbk.conf.5.asciidoc
@@ -242,15 +242,18 @@ set to ``all'' (the default).
 
 === SSH Options
 
-*ssh_identity* <file>::
-    Absolute path to a ssh identity file (private key). Note that if
-    the private key is password protected, btrbk will prompt for user
-    input, which is usually not desired.
+*ssh_identity* <file>|no::
+    Absolute path to a ssh identity file (private key). If not set,
+    the ssh default is used (see ssh(1), "-i identity_file"). Note
+    that if the identity key is password protected and no
+    authentication agent is used, btrbk will prompt for user input on
+    every connection attempt.
 
-*ssh_user* <username>::
+*ssh_user* <username>|no::
     Remote username for ssh. Defaults to ``root''. Make sure the
     remote user is able to run "btrfs" with root privileges (see
-    option 'backend' for details).
+    option 'backend' for details). If set to ``no'', the ssh default
+    is used.
 
 *ssh_compression* yes|no::
     Enables or disables the compression of ssh connections. Defaults
@@ -261,13 +264,7 @@ set to ``all'' (the default).
     Selects the cipher specification for encrypting the session
     (comma-separated list of ciphers in order of preference). See the
     "-c cipher_spec" option in ssh(1) for more information. Defaults
-    to ``default'' (the ciphers specified in 'ssh_config').
-
-Previous versions btrbk allowed you to set a *ssh_port* option, this
-has been dropped in favor of the `ssh://hostname:port` notation in the
-'volume' and 'target' <<_sections,sections>>. If you want to set a
-global port for all SSH connections to remote hosts, set the ``Port''
-option in ssh_config(5).
+    to ``default'' (the ciphers specified in ssh_config(5)).
 
 
 === Data Stream Options
@@ -430,12 +427,6 @@ If you want to set this option for local or remote hosts only, set
 
 === Btrfs Specific Options
 
-*btrfs_commit_delete* after|each|no::
-    If set, make sure the deletion of snapshot and backup subvolumes
-    are committed to disk when btrbk terminates (sets '--commit-after'
-    or '--commit-each' options when running "btrfs subvolume
-    delete"). Defaults to ``no''.
-
 *incremental_prefs* <list-spec>[:<amount>]...::
     Specify the preferences to determine the best common (correlated)
     parent and clone sources for incremental backups, by choosing from
@@ -487,6 +478,11 @@ sources for all (!) known candidates on the filesystem.
     snapshot/target directories. Set this to ``directory'' if you get
     access problems (when not running btrbk as root). Defaults to
     ``mountpoint''.
+
+*btrfs_commit_delete* yes|no::
+    If set, wait for the transaction commit at the end of each
+    snapshot or backup deletion (sets '--commit-each' option for
+    "btrfs subvolume delete"). Defaults to ``no''.
 
 *snapshot_qgroup_destroy* yes|no  _*experimental*_:: {blank}
 *target_qgroup_destroy* yes|no  _*experimental*_:: {blank}
