--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+btrbk (0.32.4-1kaisen) kaisen-packages; urgency=medium
+
+  * Import the 0.32.4 version
+
+ -- Kevin Chevreuil - Kaisen <kaisen@kaisenlinux.org>  Sun, 25 Sep 2022 17:57:07 +0100
+
 btrbk (0.32.3-1kaisen) kaisen-packages; urgency=medium
 
   * Import 0.32.3 version
