--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+btrbk (0.32.5-1kaisen) kaisen-packages; urgency=medium
+
+  * Import the 0.32.5 version
+
+ -- Kevin Chevreuil - Kaisen <kaisen@kaisenlinux.org>  Wed, 23 Nov 2022 13:27:46 +0100
+
 btrbk (0.32.4-1kaisen) kaisen-packages; urgency=medium
 
   * Import the 0.32.4 version
