--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+btrbk (0.32.6-1kaisen) kaisen-packages; urgency=medium
+
+  * Import the 0.32.6 version
+
+ -- Kevin Chevreuil - Kaisen <kaisen@kaisenlinux.org>  Mon, 08 May 2023 23:19:23 +0100
+
 btrbk (0.32.5-1kaisen) kaisen-packages; urgency=medium
 
   * Import the 0.32.5 version
